--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,7 +47,8 @@
   "devDependencies": {
     "@types/react": "^16.9.35",
     "husky": "^4.2.3",
-    "lint-staged": "^10.0.7"
+    "lint-staged": "^10.0.7",
+    "typescript": "^4.6.4"
   },
   "husky": {
     "hooks": {
