--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.5",
+    "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.7.0",
+    "@mui/x-data-grid": "^5.11.0",
     "@redux-devtools/extension": "^3.2.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -24,7 +26,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
